# RAG_against_the_machine

./: .gitignore  Makefile  README.md  plan.md  pyproject.toml
src/student/: __init__.py  __main__.py  cli.py  models.py
tests/: test_models.py
