[project]
name = "call-me-maybe"
version = "0.1.0"
description = "An AI project that has for goal to find a function name and argmenta based of a prompt"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bm25s>=0.2.0",
    "fire>=0.7.0",
    "numpy>=2.2.6",
    "pydantic>=2.13.4",
    "regex>=2026.4.4",
    "rich>=15.0.0",
    "torch>=2.11.0",
    "tqdm>=4.67.0",
    "transformers>=5.8.0",
    "types-regex>=2026.5.9.20260518",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.20.2",
    "pytest>=8.0.0",
]

[[tool.mypy.overrides]]
module = "vllm.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "fire"
ignore_missing_imports = true
